# internal-ai-bridge-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  ninjacat-test-ingressroute.yaml  ninjacat-test-service-external.yaml  ninjacat_pipe.py  pyproject.toml  run_server.sh  system_prompt.md
.github/workflows/: publish.yml
docs/: architecture.md  idea.md
src/app/: __init__.py  asgi.py  auth.py  cli.py  config.py  memory_api.py  memory_cli.py  server.py  storage.py  swagger.py
src/app/server_components/: __init__.py  apps.py  mcp.py  middleware.py  response_handler.py  state.py
src/ninjacat_mcp/: __init__.py  ai_client.py  asgi.py  cli.py  config.py  server.py
